--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,7 +119,7 @@ flutter:
     - img/chongzhi.png
     - img/tixian.png
     - img/qianbao.png
-    - img/weikaijing.png
+    - img/weikaijiang.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
