--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,7 +47,7 @@
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
     	<array>
-    		<string>arm64</string>
+    		<string>armv7</string>
     	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
