--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,6 @@ dependencies:
   flutter_easyrefresh: ^1.2.7
   dio: 3.0.9 #latest version
   http: ^0.12.0+2
-  flutter_k_chart:
-    git:
-      url: https://github.com/gwhcn/flutter_k_chart
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -40,7 +35,7 @@ dependencies:
   transparent_image: ^1.0.0
   flutter_screenutil: ^0.4.2
   marquee_flutter: ^0.1.2
-  flutter_html: ^1.0.0
+  flutter_html: 0.11.1
   image_picker: ^0.6.7+12
   url_launcher: ^5.7.2
   package_info: ^0.4.3
