--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - img/1.png
+    - img/pl3.jpg
+    - img/d1.png
+    - img/d2.png
+    - img/d3.png
     - img/2.png
     - img/3.png
     - img/4.png
@@ -116,6 +120,8 @@ flutter:
     - img/tixian.png
     - img/qianbao.png
     - img/weikaijiang.png
+    - img/chupiaozhong.png
+    - img/yichupiao.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
