--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.1.3+1
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^0.5.8
   transparent_image: ^1.0.0
   flutter_screenutil: ^0.4.2
+  webview_flutter: ^0.3.24
   marquee_flutter: ^0.1.2
   flutter_html: 0.11.1
   image_picker: ^0.6.7+12
