--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,6 +123,7 @@ flutter:
     - img/weikaijiang.png
     - img/chupiaozhong.png
     - img/yichupiao.png
+    - img/yl.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
