--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,6 +124,7 @@ flutter:
     - img/chupiaozhong.png
     - img/yichupiao.png
     - img/yl.jpg
+    - img/beijing.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
