--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,20 +57,20 @@ android {
         }
     }
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.release
-            minifyEnabled true
-            useProguard true
-
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
 //        release {
 //            // TODO: Add your own signing config for the release build.
 //            // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.release
+//            minifyEnabled true
+//            useProguard true
+//
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //        }
+        release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
